# tilepad-manifest

./: Cargo.toml  README.md  cspell.json
schemas/: icons.json  plugins.json
src/: icons.rs  lib.rs  plugin.rs  system.rs  validation.rs
