[package]
name = "tilepad-manifest"
description = "Manifest parsing and structures for tilepad plugins and icon packs"
version = "0.6.0"
edition = "2024"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/tilepad/tilepad-manifest"
readme = "README.md"
license = "MIT"

[dependencies]
node-semver = "2.2.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
garde = { version = "0.22.0", features = ["full"] }
strum = { version = "0.27.1", features = ["derive"] }
dirs = "6.0.0"
thiserror = "2.0.12"
indexmap = { version = "2.8.0", features = ["serde"] }
serde_with = "3.12.0"
